--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;800;900&display=swap" rel="stylesheet">
 
 		<link rel="stylesheet" href="css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="css/slick.css"/>
+		<link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
+
 	</head>
 	<body>
 		<div style="display: none!important">
@@ -88,6 +91,35 @@
 					</clipPath>
 				</defs>
 			</svg>
+
+			<svg id="right-arrow"  viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<g clip-path="url(#clip0)">
+					<path d="M41.5188 19.8387C41.5183 19.8382 41.5179 19.8376 41.5173 19.8371L32.9447 11.3059C32.3025 10.6668 31.2638 10.6691 30.6245 11.3114C29.9853 11.9537 29.9878 12.9924 30.63 13.6316L36.3856 19.3594H1.64062C0.734508 19.3594 0 20.0939 0 21C0 21.9061 0.734508 22.6406 1.64062 22.6406H36.3855L30.6301 28.3683C29.9878 29.0075 29.9854 30.0463 30.6246 30.6885C31.2638 31.3309 32.3027 31.3331 32.9448 30.6941L41.5174 22.1628C41.5179 22.1624 41.5183 22.1618 41.5189 22.1613C42.1614 21.52 42.1594 20.4778 41.5188 19.8387Z" fill="black"/>
+				</g>
+				<defs>
+					<clipPath id="clip0">
+						<rect width="42" height="42" fill="white"/>
+					</clipPath>
+				</defs>
+			</svg>
+
+			<svg id="left-arrow" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<g clip-path="url(#clip0)">
+					<path d="M0.481194 19.8387C0.481686 19.8382 0.482098 19.8376 0.482674 19.8371L9.05527 11.3059C9.69749 10.6668 10.7362 10.6691 11.3755 11.3114C12.0147 11.9537 12.0122 12.9924 11.37 13.6316L5.61438 19.3594H40.3594C41.2655 19.3594 42 20.0939 42 21C42 21.9061 41.2655 22.6406 40.3594 22.6406H5.61446L11.3699 28.3683C12.0122 29.0075 12.0146 30.0463 11.3754 30.6885C10.7362 31.3309 9.69732 31.3331 9.05518 30.6941L0.48259 22.1628C0.482098 22.1624 0.481686 22.1618 0.481113 22.1613C-0.161438 21.52 -0.159386 20.4778 0.481194 19.8387Z" fill="black"/>
+				</g>
+				<defs>
+					<clipPath id="clip0">
+						<rect width="42" height="42" fill="white" transform="matrix(-1 0 0 1 42 0)"/>
+					</clipPath>
+				</defs>
+			</svg>
+
+			<svg id="quote-left" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M11.0768 14.7692H6.76909C6.25623 14.7692 5.82023 14.5898 5.46122 14.2308C5.10241 13.8718 4.92277 13.4359 4.92277 12.9229V12.3078C4.92277 10.9487 5.40363 9.78858 6.36528 8.82693C7.32687 7.86561 8.48723 7.38475 9.84615 7.38475H11.0768C11.4101 7.38475 11.6985 7.2629 11.9422 7.0194C12.1857 6.77577 12.3075 6.48742 12.3075 6.15407V3.69231C12.3075 3.35902 12.1857 3.0704 11.9422 2.82677C11.6985 2.58348 11.4102 2.46143 11.0768 2.46143H9.84615C8.51269 2.46143 7.24052 2.72129 6.02884 3.24027C4.81729 3.7596 3.76935 4.46159 2.88462 5.34632C1.99996 6.23065 1.29817 7.27866 0.778914 8.49034C0.25966 9.70189 0 10.9744 0 12.3077V25.8459C0 26.8721 0.35881 27.7434 1.07677 28.4616C1.79479 29.1794 2.66679 29.5383 3.69236 29.5383H11.0773C12.1028 29.5383 12.9745 29.1794 13.6926 28.4616C14.4104 27.7434 14.7695 26.8721 14.7695 25.8459V18.4616C14.7695 17.4356 14.4104 16.5643 13.6922 15.846C12.9744 15.1282 12.1023 14.7692 11.0768 14.7692Z" fill="#6DCC0E"/>
+				<path d="M30.9237 15.846C30.2059 15.1282 29.3341 14.7692 28.3084 14.7692H24.0007C23.4881 14.7692 23.0517 14.5898 22.6933 14.2308C22.3341 13.8718 22.1548 13.4359 22.1548 12.9229V12.3078C22.1548 10.9487 22.6357 9.78858 23.5969 8.82693C24.5581 7.86561 25.7184 7.38475 27.078 7.38475H28.3084C28.6418 7.38475 28.9303 7.2629 29.1738 7.0194C29.4172 6.77577 29.5394 6.48742 29.5394 6.15407V3.69231C29.5394 3.35902 29.4173 3.0704 29.1738 2.82677C28.9304 2.58348 28.6418 2.46143 28.3084 2.46143H27.078C25.7438 2.46143 24.4719 2.72129 23.2599 3.24027C22.0486 3.7596 21.001 4.46159 20.1162 5.34632C19.2315 6.23065 18.5294 7.27866 18.0103 8.49034C17.4912 9.70189 17.2312 10.9744 17.2312 12.3077V25.8459C17.2312 26.8721 17.5903 27.7434 18.3081 28.4616C19.0259 29.1794 19.8977 29.5383 20.9234 29.5383H28.308C29.3337 29.5383 30.2055 29.1794 30.9232 28.4616C31.6415 27.7434 31.9999 26.8721 31.9999 25.8459V18.4616C32 17.4355 31.6415 16.5643 30.9237 15.846Z" fill="#6DCC0E"/>
+			</svg>
+
+
 
 		</div>
 
@@ -189,24 +221,55 @@
 				</div>
 			</section>
 			<!-- about_end-->
-			<div class="main__text">
-				<span> Лекції проходитимуть у сучасній обладнаній аудиторії </span>
-				<div class="main__items">
-					<svg>
-						<use href="#projector"></use>
-					</svg>
-					<svg>
-						<use href="#ventilador"></use>
-					</svg>
-					<svg>
-						<use href="#drop"></use>
-					</svg>
-					<svg>
-						<use href="#coffee"></use>
-					</svg>
+			<section class="home__about">
+				<div class="container">
+					<div class="main__text">
+						<span> Лекції проходитимуть у сучасній обладнаній аудиторії </span>
+						<div class="main__items">
+							<svg>
+								<use href="#projector"></use>
+							</svg>
+							<svg>
+								<use href="#ventilador"></use>
+							</svg>
+							<svg>
+								<use href="#drop"></use>
+							</svg>
+							<svg>
+								<use href="#coffee"></use>
+							</svg>
+						</div>
+					</div>
+
+					<div class="slider">
+						<div class="slider-action">
+							<div class="slick-slider">
+								<div> <img src="img/slider-1.jpg"> </div>
+								<div> <img	src="img/slider-2.jpg"> </div>
+								<div> <img	src="img/slider-1.jpg"> </div>
+							</div>
+							<!-- /slider -->
+							<div class="slider-controls">
+								<button id="slider_prev">
+									<svg>
+										<use href="#left-arrow"></use>
+									</svg>
+								</button>
+								<span id="current_slide">1</span>
+								із
+								<span id="total_slides">6</span>
+								<button id="slider_next">
+									<svg>
+										<use href="#right-arrow"></use>
+									</svg>
+								</button>
+							</div>
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="main__for">
+			</section >
+
+			<!-- <div class="main__for">
 				<div class="for__text">
 					<h1 >
 						<span> КОМУ ПІДІЙДЕ </span>
@@ -214,11 +277,11 @@
 					</h1>
 				</div>
 				<div class="for__item">
-					<!-- <div id="rectangle_1"></div> -->
+					
 					<div class="for__item-image">
 						<svg class="for__item-rect1">   <rect x="0" y="0" width="52" height="52"/> </svg>
 						<img class="for__item-img" src="img/item1.png" alt="for__item1">
-						<!-- <div id="rectangle_2"></div> -->
+						
 						<svg class="for__item-rect2">   <rect x="0" y="0" width="121" height="121"/> </svg>
 					</div>
 					<div class="for__item-name"> 
@@ -229,7 +292,8 @@
 					</div>
 				</div>
 			</div>
-			<section>)))))))))))</section>
+			<section>)))))))))))</section> -->
+
 			<section  class="home__for-who">
 				<div class="container">
 					<div class="d-flex">
@@ -293,8 +357,9 @@
 					</div> 
 				</div>
 			</section>
-			<section class="home__cta">
-				<div class="container">
+			<div class="container">
+				<section class="home__cta">
+
 					<div class="d-flex">
 						<div class="title">
 							<span> Не зволікай! </span>
@@ -321,6 +386,95 @@
 						<span> ВИПУСКНИКІВ </span>
 					</div>
 
+					<div class="slider">
+						<div class="slider-action">
+							<div class="slick-slider">
+								<div class="card"> 
+									<svg>
+										<use href="#quote-left"></use>
+										<div class="text">
+											Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+										</div>
+										<div class="card-who">
+											<div class="who-title">
+												<div class="who-name">
+													Андрій
+												</div>
+												<div class="who-job">
+													Senior UI/UX designer, Softserve
+												</div>
+											</div>
+											<div class="card-photo">
+												<img src="img/avatar.png">
+											</div>
+										</div>
+									</svg>
+								</div>
+
+								<div class="card"> 
+									<svg>
+										<use href="#quote-left"></use>
+										<div class="text">
+											Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+										</div>
+										<div class="card-who">
+											<div class="who-title">
+												<div class="who-name">
+													Андрій
+												</div>
+												<div class="who-job">
+													Senior UI/UX designer, Softserve
+												</div>
+											</div>
+											<div class="card-photo">
+												<img src="img/avatar.png">
+											</div>
+										</div>
+									</svg>
+								</div>
+
+								<div class="card"> 
+									<svg>
+										<use href="#quote-left"></use>
+										<div class="text">
+											Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+										</div>
+										<div class="card-who">
+											<div class="who-title">
+												<div class="who-name">
+													Андрій
+												</div>
+												<div class="who-job">
+													Senior UI/UX designer, Softserve
+												</div>
+											</div>
+											<div class="card-photo">
+												<img src="img/avatar.png">
+											</div>
+										</div>
+									</svg>
+								</div>
+
+							</div>
+							<!-- /slider -->
+							<div class="slider-controls">
+								<button id="slider_prev">
+									<svg>
+										<use href="#left-arrow"></use>
+									</svg>
+								</button>
+								<span id="current_slide">1</span>
+								із
+								<span id="total_slides">6</span>
+								<button id="slider_next">
+									<svg>
+										<use href="#right-arrow"></use>
+									</svg>
+								</button>
+							</div>
+						</div>
+					</div>
+
 				</div>
 			</section>
 
@@ -334,7 +488,7 @@
 							</div>
 							<div class="item">
 								Адреса
-								<span> вул. Раневицька, 5а, Дрогобич, Львівська область, 82100 </span>
+								<span> вул. Раневицька, 5а, Дрогобич,<br>  Львівська область, 82100 </span>
 							</div>
 							<div class="item">
 								Контактний телефон
@@ -344,19 +498,35 @@
 								Ми в соц. мережах
 
 								<div class="contact__items">
+									<a href="#" tittle="instagram">
 									<svg>
 										<use href="#instagram"></use>
 									</svg>
+								</a>
+								<a href="#" tittle="facebook">
 									<svg>
 										<use href="#facebook"></use>
 									</svg>
-									</div>
+								</a>
+								</div>
 
 							</div>
 						</div>
 						<div class="contacts__form">
-							<div class="title">
-								Залиш заявку до <span> 15 липня </span> та отримай <span> знижку 10% </span> на весь курс
+							<div class="title-form">
+								Залиш заявку до <span> 15 липня </span> <br> та отримай <span> знижку 10% </span> на весь курс
+							</div>
+							<div class="form-item">
+								<input type="text" placeholder="Ваше ім'я">
+							</div>
+							<div class="form-item">
+								<input type="text" placeholder="Номер телефону">
+							</div>
+							<div class="form-item">
+								<input type="text" placeholder="Email">
+							</div>
+							<div class="form-cta">
+								<button class="form__action"> Записатись на курс </button>
 							</div>
 						</div>
 					</div>
@@ -365,7 +535,15 @@
 
 		</main>
 
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script> 
 
+		<!-- Slick slider-->
+
+		<script type="text/javascript" src="js/slick.min.js"></script>
+
+		<script src="js/app.js">
+
+		</script>
 
 
 	</body>
